# smarta-media-analysis

./: README.md  media_best_practices.ipynb  pyproject.toml
app/: xgboost_adapter.py  xgboost_handler.py  xgboost_service.py
output/baby_face/: baby_face_shown.csv
output/dataset_info/: influencer_data_set_info.json
output/final_output/: final_df_w_new_faces_and_gaze.csv  merged_df_faces.csv  merged_df_faces_product_usage.csv  merged_df_final_no_gaze.csv  merged_df_final_pre_gaze.csv  merged_df_w_nlp_rules.csv  prepared_for_model_pre_gaze.csv
output/gaze_detection/: coterie.csv  gaze_detection_final.csv  healthybaby.co.csv  honest.csv  huggies.csv  kudostobaby.csv  luvs.csv  mymilliemoon.csv  pampersus.csv  rascalsbaby.csv  theninjamas.csv
output/product_usage_results/: img_product_usage.json  product_usage_results.csv  video_product_usage.json
output/transcription/: transcription_results.json  wav_file_text_mapping.json
saved_data/: audio_df_nlp_questions.csv  baby_face_shown.json  final_df_dropped_cols.csv  final_df_w_all_features.csv  final_df_w_all_features_engagement.csv  final_df_w_all_features_likes_to_followers.csv  final_df_w_all_features_with_kpis.csv  hook_df.csv  image_ocr.pickle  initial_df.csv  initial_df_1.csv  initial_df_2.csv  initial_df_3.csv  initial_df_4.csv  initial_df_5.csv  initial_df_6.csv  initial_df_7.csv  merged_brand_df_with_cta.csv  merged_df_nlp_questions.csv  post_id_index_mapping.csv  scaler.pkl  scenes_df.csv  transcriptions_df.csv  transcriptions_df_with_cta.csv  video_duration.csv  vladi_final_df.csv
src/audio/: analyze.py  (+1 more)
(+57 files in other folders)
