[tool.poetry]
name = "smarta-influencer-analysis"
version = "0.1.0"
description = ""
authors = ["SmartAssets"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
instaloader = "^4.14"
ipykernel = "^6.29.5"
requests = "^2.32.3"
openai-whisper = "^20240930"
google-cloud-storage = "^2.18.2"
moviepy = "^2.0.0"
pandas = "^2.2.3"
python-levenshtein = "^0.26.1"
spacy = "^3.8.2"
imageio = "^2.36.0"
emot = "^3.1"
scikit-learn = "^1.5.2"
nltk = "^3.9.1"
onnxruntime = "^1.20.1"
imgbeddings = "^0.1.0"
huggingface_hub = "==0.13.4"
google-cloud-videointelligence = "^2.14.1"
google-cloud-vision = "^3.8.1"
scenedetect = "^0.6.5"
matplotlib = "^3.9.2"
xgboost = "^2.1.3"
seaborn = "^0.13.2"
pdpbox = "^0.3.0"
vadersentiment = "^3.3.2"
vertexai = "^1.71.1"


[tool.poetry.dependencies.rembg]
version = "^2.0.60"
python = ">=3.9,<3.13"



[tool.poetry.group.dev.dependencies]
ipykernel = "^6.29.5"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"